--- a/index.html
+++ b/index.html
@@ -1,62 +1,110 @@
-<script>
-  function guardarServicio() {
-    const folio = document.getElementById('folio').value;
-    const fechaObj = new Date();
-    const fecha = fechaObj.toLocaleDateString();
-    const hora = fechaObj.toLocaleTimeString();
-    const telefonista = document.getElementById('nombre').value.trim();
-    const domicilio = document.getElementById('domicilio').value.trim();
-    const destino = document.getElementById('destino').value.trim();
-    const asignado = document.getElementById('asignado').value.trim();
-    const tipo = document.getElementById('tipo').value.trim();
-    const observaciones = document.getElementById('observaciones').value.trim();
-
-    fetch('TU_URL_DEL_WEBAPP', {
-      method: 'POST',
-      body: JSON.stringify({
-        tipo: "servicio",
-        folio,
-        fecha,
-        hora,
-        telefonista,
-        domicilio,
-        destino,
-        asignado,
-        tipoServicio: tipo,
-        observaciones,
-        timestamp: new Date().toISOString()
-      }),
-      headers: { "Content-Type": "application/json" }
-    }).then(() => {
-      alert("Servicio registrado correctamente.");
-    });
-  }
-
-  function checarEntrada() {
-    const nombre = document.getElementById('nombre').value.trim();
-    if (nombre === "") {
-      alert("Por favor ingresa tu nombre.");
-      return;
+<!DOCTYPE html>
+<html lang="es">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Captura de Servicios</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #f4f6f8;
+      padding: 20px;
     }
+    h1 {
+      color: #333;
+    }
+    form {
+      background: #fff;
+      padding: 20px;
+      border-radius: 8px;
+      max-width: 500px;
+      margin: auto;
+      box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+    }
+    label {
+      display: block;
+      margin-top: 15px;
+      font-weight: bold;
+    }
+    input, select, textarea {
+      width: 100%;
+      padding: 10px;
+      margin-top: 5px;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+    }
+    button {
+      margin-top: 20px;
+      padding: 10px 20px;
+      background-color: #0078d4;
+      color: white;
+      border: none;
+      border-radius: 4px;
+      cursor: pointer;
+    }
+    button:hover {
+      background-color: #005ea2;
+    }
+    .success {
+      color: green;
+      margin-top: 15px;
+    }
+    .error {
+      color: red;
+      margin-top: 15px;
+    }
+  </style>
+</head>
+<body>
+  <h1>Captura de Servicios</h1>
+  <form id="serviceForm">
+    <label for="nombre">Nombre del Servicio</label>
+    <input type="text" id="nombre" name="nombre" required />
 
-    fetch('TU_URL_DEL_WEBAPP', {
-      method: 'POST',
-      body: JSON.stringify({
-        tipo: "asistencia",
-        nombre,
-        entrada: new Date().toISOString()
-      }),
-      headers: { "Content-Type": "application/json" }
+    <label for="descripcion">Descripción</label>
+    <textarea id="descripcion" name="descripcion" rows="4" required></textarea>
+
+    <label for="categoria">Categoría</label>
+    <select id="categoria" name="categoria" required>
+      <option value="">Selecciona una</option>
+      <option value="Administrativo">Administrativo</option>
+      <option value="Técnico">Técnico</option>
+      <option value="Otro">Otro</option>
+    </select>
+
+    <button type="submit">Enviar</button>
+    <div id="responseMessage"></div>
+  </form>
+
+  <script>
+    const form = document.getElementById('serviceForm');
+    const responseMessage = document.getElementById('responseMessage');
+
+    form.addEventListener('submit', async (e) => {
+      e.preventDefault();
+
+      const formData = new FormData(form);
+      const data = Object.fromEntries(formData.entries());
+
+      try {
+        const response = await fetch('https://script.google.com/macros/s/AKfycbvU8DT6doFHnSQNtv9EyRmpkMk69-0SBP00ClefyN7ofsXV_7izCWTKMRLv91MdZtDdRw/exec', {
+          method: 'POST',
+          mode: 'no-cors',
+          headers: {
+            'Content-Type': 'application/json'
+          },
+          body: JSON.stringify(data)
+        });
+
+        responseMessage.textContent = '✅ Datos enviados correctamente.';
+        responseMessage.className = 'success';
+        form.reset();
+      } catch (error) {
+        responseMessage.textContent = '❌ Error al enviar los datos.';
+        responseMessage.className = 'error';
+        console.error(error);
+      }
     });
-
-    document.getElementById('login').style.display = "none";
-    document.getElementById('formulario').style.display = "block";
-    document.getElementById('folio').value = generarFolio();
-    document.getElementById('timestamp').value = new Date().toISOString();
-  }
-
-  function generarFolio() {
-    const ahora = new Date();
-    return "F" + ahora.getTime();
-  }
-</script>
+  </script>
+</body>
+</html>
