--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>App de Tarifa</title>
+  <title>Gestión de Servicios y Tarifas</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -11,8 +11,31 @@
       padding: 20px;
     }
     h1 {
-      color: #333;
       text-align: center;
+      color: #333;
+    }
+    .tabs {
+      display: flex;
+      justify-content: center;
+      margin-bottom: 20px;
+    }
+    .tab-button {
+      padding: 10px 20px;
+      margin: 0 5px;
+      border: none;
+      background-color: #ccc;
+      cursor: pointer;
+      border-radius: 4px 4px 0 0;
+    }
+    .tab-button.active {
+      background-color: #0078d4;
+      color: white;
+    }
+    .form-container {
+      display: none;
+    }
+    .form-container.active {
+      display: block;
     }
     form {
       background: #fff;
@@ -27,7 +50,7 @@
       margin-top: 15px;
       font-weight: bold;
     }
-    input, select {
+    input, select, textarea {
       width: 100%;
       padding: 10px;
       margin-top: 5px;
@@ -46,72 +69,125 @@
     button:hover {
       background-color: #005ea2;
     }
-    .success {
-      color: green;
-      margin-top: 15px;
+    .success, .error {
       text-align: center;
-    }
-    .error {
-      color: red;
       margin-top: 15px;
-      text-align: center;
+      font-weight: bold;
     }
+    .success { color: green; }
+    .error { color: red; }
   </style>
 </head>
 <body>
-  <h1>Registro de Tarifas</h1>
-  <form id="tarifaForm">
-    <label for="servicio">Servicio</label>
-    <input type="text" id="servicio" name="servicio" required />
+  <h1>Gestión de Servicios y Tarifas</h1>
 
-    <label for="monto">Monto</label>
-    <input type="number" id="monto" name="monto" step="0.01" required />
+  <div class="tabs">
+    <button class="tab-button active" onclick="showTab('servicios')">Captura de Servicios</button>
+    <button class="tab-button" onclick="showTab('tarifas')">Registro de Tarifas</button>
+  </div>
 
-    <label for="unidad">Unidad</label>
-    <select id="unidad" name="unidad" required>
-      <option value="">Selecciona una</option>
-      <option value="Hora">Hora</option>
-      <option value="Día">Día</option>
-      <option value="Evento">Evento</option>
-    </select>
+  <!-- Captura de Servicios -->
+  <div id="servicios" class="form-container active">
+    <form id="serviceForm">
+      <label for="nombre">Nombre del Servicio</label>
+      <input type="text" id="nombre" name="nombre" required />
 
-    <label for="categoria">Categoría</label>
-    <select id="categoria" name="categoria" required>
-      <option value="">Selecciona una</option>
-      <option value="Interno">Interno</option>
-      <option value="Externo">Externo</option>
-    </select>
+      <label for="descripcion">Descripción</label>
+      <textarea id="descripcion" name="descripcion" rows="4" required></textarea>
 
-    <button type="submit">Guardar Tarifa</button>
-    <div id="responseMessage"></div>
-  </form>
+      <label for="categoria">Categoría</label>
+      <select id="categoria" name="categoria" required>
+        <option value="">Selecciona una</option>
+        <option value="Administrativo">Administrativo</option>
+        <option value="Técnico">Técnico</option>
+        <option value="Otro">Otro</option>
+      </select>
+
+      <button type="submit">Enviar Servicio</button>
+      <div id="responseService"></div>
+    </form>
+  </div>
+
+  <!-- Registro de Tarifas -->
+  <div id="tarifas" class="form-container">
+    <form id="tarifaForm">
+      <label for="servicio">Servicio</label>
+      <input type="text" id="servicio" name="servicio" required />
+
+      <label for="monto">Monto</label>
+      <input type="number" id="monto" name="monto" step="0.01" required />
+
+      <label for="unidad">Unidad</label>
+      <select id="unidad" name="unidad" required>
+        <option value="">Selecciona una</option>
+        <option value="Hora">Hora</option>
+        <option value="Día">Día</option>
+        <option value="Evento">Evento</option>
+      </select>
+
+      <label for="categoriaTarifa">Categoría</label>
+      <select id="categoriaTarifa" name="categoria" required>
+        <option value="">Selecciona una</option>
+        <option value="Interno">Interno</option>
+        <option value="Externo">Externo</option>
+      </select>
+
+      <button type="submit">Guardar Tarifa</button>
+      <div id="responseTarifa"></div>
+    </form>
+  </div>
 
   <script>
-    const form = document.getElementById('tarifaForm');
-    const responseMessage = document.getElementById('responseMessage');
+    function showTab(tabId) {
+      document.querySelectorAll('.form-container').forEach(div => div.classList.remove('active'));
+      document.querySelectorAll('.tab-button').forEach(btn => btn.classList.remove('active'));
+      document.getElementById(tabId).classList.add('active');
+      event.target.classList.add('active');
+    }
 
-    form.addEventListener('submit', async (e) => {
+    const serviceForm = document.getElementById('serviceForm');
+    const tarifaForm = document.getElementById('tarifaForm');
+    const responseService = document.getElementById('responseService');
+    const responseTarifa = document.getElementById('responseTarifa');
+
+    const endpoint = 'https://script.google.com/macros/s/AKfycbvU8DT6doFHnSQNtv9EyRmpkMk69-0SBP00ClefyN7ofsXV_7izCWTKMRLv91MdZtDdRw/exec';
+
+    serviceForm.addEventListener('submit', async (e) => {
       e.preventDefault();
-
-      const formData = new FormData(form);
-      const data = Object.fromEntries(formData.entries());
-
+      const data = Object.fromEntries(new FormData(serviceForm).entries());
       try {
-        const response = await fetch('https://script.google.com/macros/s/AKfycbvU8DT6doFHnSQNtv9EyRmpkMk69-0SBP00ClefyN7ofsXV_7izCWTKMRLv91MdZtDdRw/exec', {
+        await fetch(endpoint, {
           method: 'POST',
           mode: 'no-cors',
-          headers: {
-            'Content-Type': 'application/json'
-          },
+          headers: { 'Content-Type': 'application/json' },
           body: JSON.stringify(data)
         });
-
-        responseMessage.textContent = '✅ Tarifa registrada correctamente.';
-        responseMessage.className = 'success';
-        form.reset();
+        responseService.textContent = '✅ Servicio enviado correctamente.';
+        responseService.className = 'success';
+        serviceForm.reset();
       } catch (error) {
-        responseMessage.textContent = '❌ Error al registrar la tarifa.';
-        responseMessage.className = 'error';
+        responseService.textContent = '❌ Error al enviar el servicio.';
+        responseService.className = 'error';
+        console.error(error);
+      }
+    });
+
+    tarifaForm.addEventListener('submit', async (e) => {
+      e.preventDefault();
+      const data = Object.fromEntries(new FormData(tarifaForm).entries());
+      try {
+        await fetch(endpoint, {
+          method: 'POST',
+          mode: 'no-cors',
+          headers: { 'Content-Type': 'application/json' },
+          body: JSON.stringify(data)
+        });
+        responseTarifa.textContent = '✅ Tarifa registrada correctamente.';
+        responseTarifa.className = 'success';
+        tarifaForm.reset();
+      } catch (error) {
+        responseTarifa.textContent = '❌ Error al registrar la tarifa.';
+        responseTarifa.className = 'error';
         console.error(error);
       }
     });
