--- a/index.html
+++ b/index.html
@@ -6,39 +6,45 @@
   <style>
     body {
       font-family: Arial, sans-serif;
-      background-color: #e6f0ff; /* Azul institucional */
+      background-color: #e6f0ff;
       margin: 0;
       padding: 0;
     }
+
     header {
       background-color: #003366;
       color: white;
       padding: 10px;
       text-align: center;
     }
+
     header img {
       height: 50px;
       vertical-align: middle;
     }
+
     .container {
       padding: 20px;
-      max-width: 600px;
+      max-width: 700px;
       margin: auto;
       background-color: white;
       border-radius: 8px;
       box-shadow: 0 0 10px rgba(0,0,0,0.1);
     }
+
     label {
       display: block;
       margin-top: 15px;
       font-weight: bold;
     }
+
     input, select, textarea {
       width: 100%;
       padding: 8px;
       margin-top: 5px;
       box-sizing: border-box;
     }
+
     button {
       margin-top: 20px;
       padding: 10px 20px;
@@ -48,13 +54,33 @@
       border-radius: 4px;
       cursor: pointer;
     }
+
     button:hover {
       background-color: #0055aa;
     }
+
     #mensaje {
       margin-top: 15px;
-      color: green;
       font-weight: bold;
+      text-align: center;
+    }
+
+    .oculto {
+      display: none;
+    }
+
+    .campo-invalido {
+      border: 2px solid red;
+      background-color: #ffe6e6;
+    }
+
+    .fila-horizontal {
+      display: flex;
+      gap: 1rem;
+    }
+
+    .fila-horizontal > div {
+      flex: 1;
     }
   </style>
 </head>
@@ -64,75 +90,156 @@
     <h1>Captura de Servicios</h1>
   </header>
 
-  <div class="container">
+  <div class="container" id="desbloqueo">
+    <h2>Desbloqueo del Sistema</h2>
+    <label for="nombre">Nombre del Telefonista</label>
+    <input type="text" id="nombre" />
+    <button onclick="iniciarTurno()">Iniciar Captura</button>
+  </div>
+
+  <div class="container oculto" id="formularioContainer">
     <form id="formulario">
+      <input type="hidden" id="inicioTurno">
+      <input type="hidden" id="finTurno">
+
       <label for="folio">Folio</label>
-      <input type="text" id="folio" name="folio" readonly>
+      <input type="text" id="folio" readonly>
 
       <label for="telefonista">Telefonista</label>
-      <input type="text" id="telefonista" name="telefonista" readonly>
+      <input type="text" id="telefonista" readonly>
 
-      <label for="fecha">Fecha</label>
-      <input type="text" id="fecha" name="fecha" readonly>
+      <div class="fila-horizontal">
+        <div>
+          <label for="fecha">Fecha</label>
+          <input type="text" id="fecha" readonly>
+        </div>
+        <div>
+          <label for="hora">Hora</label>
+          <input type="text" id="hora" readonly>
+        </div>
+      </div>
 
-      <label for="hora">Hora</label>
-      <input type="text" id="hora" name="hora" readonly>
+      <label for="domicilio">Domicilio</label>
+      <input type="text" id="domicilio" required>
 
-      <label for="servicio">Servicio</label>
-      <input type="text" id="servicio" name="servicio" required>
+      <label for="destino">Destino</label>
+      <input type="text" id="destino" required>
+
+      <label for="asignado">Asignado a</label>
+      <input type="text" id="asignado" required>
+
+      <label for="tipoServicio">Tipo de Servicio</label>
+      <select id="tipoServicio">
+        <option value="">Selecciona una opción</option>
+        <option value="Normal">Normal</option>
+        <option value="Carro amplio">Carro amplio</option>
+        <option value="Pago con tarjeta">Pago con tarjeta</option>
+        <option value="Pago con transferencia">Pago con transferencia</option>
+        <option value="Carro rotulado">Carro rotulado</option>
+        <option value="Carro sin rotular">Carro sin rotular</option>
+        <option value="Mensajería">Mensajería</option>
+        <option value="Transporte de mascota">Transporte de mascota</option>
+      </select>
 
       <label for="observaciones">Observaciones</label>
-      <textarea id="observaciones" name="observaciones"></textarea>
+      <textarea id="observaciones"></textarea>
 
-      <button type="button" onclick="guardarServicio()">Enviar</button>
-      <button type="button" onclick="finTurno()">Fin de turno</button>
+      <div style="display: flex; gap: 1rem;">
+        <button type="button" onclick="guardarDatos()">Guardar</button>
+        <button type="button" onclick="enviarDatos()">Enviar</button>
+        <button type="button" onclick="finDeTurno()">Fin de turno</button>
+      </div>
 
       <div id="mensaje"></div>
     </form>
   </div>
 
   <script>
-    // Evitar envío automático con Enter y mover al siguiente campo
-    document.querySelectorAll('input, select, textarea').forEach((element, index, elements) => {
-      element.addEventListener('keydown', function(e) {
-        if (e.key === 'Enter') {
-          e.preventDefault();
-          const next = elements[index + 1];
-          if (next) next.focus();
-        }
-      });
-    });
-
-    // Simulación de datos automáticos
-    document.getElementById('folio').value = 'AUTO-' + Date.now();
-    document.getElementById('telefonista').value = 'Jesús';
-    const now = new Date();
-    document.getElementById('fecha').value = now.toLocaleDateString();
-    document.getElementById('hora').value = now.toLocaleTimeString();
-
-    function guardarServicio() {
-      const servicio = document.getElementById('servicio').value.trim();
-      if (!servicio) {
-        alert('Por favor ingresa el servicio.');
+    function iniciarTurno() {
+      const nombre = document.getElementById('nombre').value.trim();
+      if (!nombre) {
+        alert('Por favor ingresa tu nombre.');
         return;
       }
 
-      // Aquí iría el fetch() al script de Google Apps
-      // Simulación de éxito
-      document.getElementById('mensaje').textContent = 'Servicio registrado correctamente.';
-      document.getElementById('formulario').reset();
+      const ahora = new Date();
+      document.getElementById('inicioTurno').value = ahora.toISOString();
+      document.getElementById('telefonista').value = nombre;
+      document.getElementById('folio').value = 'SERV-' + ahora.getTime();
+      document.getElementById('fecha').value = ahora.toLocaleDateString();
+      document.getElementById('hora').value = ahora.toLocaleTimeString();
 
-      // Restaurar campos automáticos
-      document.getElementById('folio').value = 'AUTO-' + Date.now();
-      document.getElementById('telefonista').value = 'Jesús';
-      const now = new Date();
-      document.getElementById('fecha').value = now.toLocaleDateString();
-      document.getElementById('hora').value = now.toLocaleTimeString();
+      document.getElementById('desbloqueo').classList.add('oculto');
+      document.getElementById('formularioContainer').classList.remove('oculto');
     }
 
-    function finTurno() {
-      alert('Turno finalizado. El sistema se bloqueará.');
-      // Aquí puedes redirigir o bloquear el sistema
+    function guardarDatos() {
+      mostrarMensaje("📝 Datos guardados localmente (simulado).", "blue");
+    }
+
+    function enviarDatos() {
+      const datos = {
+        folio: document.getElementById("folio").value,
+        telefonista: document.getElementById("telefonista").value,
+        fecha: document.getElementById("fecha").value,
+        hora: document.getElementById("hora").value,
+        domicilio: document.getElementById("domicilio").value.trim(),
+        destino: document.getElementById("destino").value.trim(),
+        asignado: document.getElementById("asignado").value.trim(),
+        tipoServicio: document.getElementById("tipoServicio").value,
+        observaciones: document.getElementById("observaciones").value.trim(),
+        inicioTurno: document.getElementById("inicioTurno").value,
+        finTurno: document.getElementById("finTurno").value
+      };
+
+      const camposObligatorios = ["domicilio", "destino", "asignado"];
+      let faltantes = [];
+
+      camposObligatorios.forEach(id => {
+        const campo = document.getElementById(id);
+        if (!campo.value.trim()) {
+          campo.classList.add("campo-invalido");
+          faltantes.push(id);
+        } else {
+          campo.classList.remove("campo-invalido");
+        }
+      });
+
+      if (faltantes.length > 0) {
+        mostrarMensaje("⚠️ Faltan campos obligatorios: " + faltantes.join(", "), "red");
+        return;
+      }
+
+      // Reemplaza con tu URL real del script
+      fetch("https://script.google.com/macros/s/TU_ID_DEL_SCRIPT/exec", {
+        method: "POST",
+        headers: { "Content-Type": "application/json" },
+        body: JSON.stringify(datos)
+      })
+      .then(res => res.text())
+      .then(msg => {
+        mostrarMensaje("✅ Servicio registrado correctamente.", "green");
+        document.getElementById("formulario").reset();
+        const ahora = new Date();
+        document.getElementById('folio').value = 'SERV-' + ahora.getTime();
+        document.getElementById('fecha').value = ahora.toLocaleDateString();
+        document.getElementById('hora').value = ahora.toLocaleTimeString();
+      })
+      .catch(err => {
+        mostrarMensaje("❌ Error al registrar servicio.", "red");
+      });
+    }
+
+    function finDeTurno() {
+      const ahora = new Date();
+      document.getElementById("finTurno").value = ahora.toISOString();
+      mostrarMensaje("🔒 Turno finalizado. Puedes cerrar la sesión.", "black");
+    }
+
+    function mostrarMensaje(texto, color) {
+      const mensaje = document.getElementById("mensaje");
+      mensaje.textContent = texto;
+      mensaje.style.color = color;
     }
   </script>
 </body>
